<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="FragmentPaginaInicial">Game Store</string>
    <string name="FragmentPaginaGestao">Gestão da Loja</string>
    <string name="Funcionarios">Funcionarios</string>
    <string name="Clientes">Clientes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gest_o_da_loja">GESTÃO DA LOJA</string>
    <string name="funcion_rios">Funcionários</string>
    <string name="clientes">Clientes</string>
    <string name="jogos">Jogos</string>
    <string name="vendas">Vendas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="funcionarios">Funcionarios</string>
    <string name="funcionarios_lista">Funcionários</string>
    <string name="clientesbutton">Clientes</string>
    <string name="guilherme_alves">Guilherme Alves</string>
    <string name="_250116278">250116278</string>
    <string name="masculino">Masculino</string>
    <string name="_963355065">963355065</string>
    <string name="_22_10_2000">22/10/2000</string>
    <string name="inserir">Inserir</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="novo_cliente">NOVO CLIENTE</string>
    <string name="nome_cliente">Nome Cliente</string>
    <string name="nif">NIF</string>
    <string name="sexo">Sexo</string>
    <string name="oo">Sexo</string>
    <string name="sexoo">Sexo</string>
    <string name="niff">NIF</string>
    <string name="contactoo">Contacto</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar_cliente">ELIMINAR CLIENTE</string>
    <string name="novo_funcion_rio">NOVO FUNCIONÁRIO</string>
    <string name="nome_funcionario">Nome Funcionario</string>
    <string name="_957625894">957625894</string>
    <string name="_951625895">951625895</string>
    <string name="novo_jogo">NOVO JOGO</string>
    <string name="nome_jogo">Nome Jogo</string>
    <string name="preco">Preco</string>
    <string name="data_de_lancamento">Data de Lancamento</string>
    <string name="plataforma">Plataforma</string>
    <string name="genero">Genero</string>
    <string name="publicadora">Publicadora</string>
    <string name="eliminar_jogo">ELIMINAR JOGO</string>
    <string name="nomeObrigatorio">Nome Obrigatorio</string>
    <string name="precoObrigatorio">Preco Obrigatorio</string>
    <string name="generoObrigatorio">Genero Obrigatorio</string>
    <string name="publicadoraObrigatoria">Publicadora Obrigatoria</string>
    <string name="DataLancObrigatoria">Data de Lancamento Obrigatoria</string>
    <string name="plataformaObrigatoria">Plataforma Obrigatoria</string>
    <string name="jogoAtualizadoSucesso">Jogo atualizado com sucesso</string>
    <string name="nifObrigatorio">Nif Obrigatorio</string>
    <string name="contatoObrigatorio">Contato Obrigatorio</string>
    <string name="dataNascObrigatoria">Data de Nascimento Obrigatoria</string>
    <string name="nova_venda">NOVA VENDA</string>
    <string name="quantidade">Quantidade</string>
    <string name="data_de_venda">Data de Venda</string>
    <string name="funcionario">Funcionario</string>
    <string name="cliente">Cliente</string>
    <string name="quantidadeObrigatoria">Quantidade Obrigatória</string>
    <string name="precoObrigatorioo">Preco Obrigatorio</string>
    <string name="funObrigatorio">Funcionario Obrigatorio</string>
    <string name="clienteObrigatorio">Cliente Obrigatorio</string>
    <string name="jogoObrigatorio">Jogo Obrigatorio</string>
</resources>
