<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_wallpaper_001"
    android:orientation="vertical"
    tools:context=".FragmentPaginaGestao">

    <TextView
        android:id="@+id/textViewGestaoLoja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="58dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/gest_o_da_loja"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textViewFuncionarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="105dp"
        android:text="@string/funcion_rios"
        android:textColor="#000000"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_supervisor_account_24"
        app:drawableStartCompat="@drawable/ic_baseline_supervisor_account_24" />

    <TextView
        android:id="@+id/textViewClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="105dp"
        android:text="@string/clientes"
        android:textColor="#000000"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/textViewJogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="105dp"
        android:text="@string/jogos"
        android:textColor="#000000"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_baseline_games_24"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewVendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="93dp"
        android:text="@string/vendas"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        app:drawableStartCompat="@drawable/ic_baseline_attach_money_24"
        app:drawableLeftCompat="@drawable/ic_baseline_attach_money_24" />
</LinearLayout>