<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsapp_wallpaper_001"
    android:orientation="vertical"
    tools:context=".FragmentEditarFuncionarios" >

    <TextView
        android:id="@+id/textViewNovoFuncionario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/novo_funcion_rio"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:typeface="serif" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeFuncionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_funcionario"
            android:textColorHint="#757575" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNifFuncionario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/niff"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextContatoFuncionario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contactoo"
                        android:textColorHint="#757575"
                        tools:ignore="TextContrastCheck,DuplicateClickableBoundsCheck" />

                    <TextView
                        android:id="@+id/textViewDataNascFuncio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/data_de_nascimento"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <DatePicker
                        android:id="@+id/datePickerFunc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>